# av5

./: CMakeLists.txt  main.c
consts/: gameconsts.h  graphicsconsts.h
gamecore/: gamecore.c  gamecore.h
inits/: inits.c  inits.h
mainmenu/: mainmenu.c  mainmenu.h
partone/: partone.c  partone.h
random/: rand.c  rand.h
sdlcore/: sdlcore.c  sdlcore.h
types/: fontproperties.h  fonttypes.h  gametypes.h  graphicstypes.h  rects.h
